Fix image alignment in cards

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -159,8 +159,9 @@ input {
 	max-width: 300px;
 	& > img,
 	& > svg {
-		margin: 0;
+		margin: 0 auto;
 		max-width: 300px;
+		display: block;
 		@include border-radius(3px);
 		transition: background-image 1s;
 		box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2)
